This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: Modules/timemodule.c: Memory leak in time_strftime()
Type: Stage: resolved
Components: Extension Modules Versions: Python 3.8, Python 3.7, Python 3.6
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: Nosy List: ZackerySpytz, miss-islington, p-ganssle, serhiy.storchaka
Priority: normal Keywords: patch

Created on 2018-09-19 12:55 by ZackerySpytz, last changed 2022-04-11 14:59 by admin. This issue is now closed.

Pull Requests
URL Status Linked Edit
PR 9418 merged ZackerySpytz, 2018-09-19 13:00
PR 9469 merged miss-islington, 2018-09-21 06:10
PR 9470 merged miss-islington, 2018-09-21 06:10
Messages (4)
msg325754 - (view) Author: Zackery Spytz (ZackerySpytz) * (Python triager) Date: 2018-09-19 12:55
There is a missing PyMem_Free(format) in time_strftime(). I'll create a PR.
msg325958 - (view) Author: Serhiy Storchaka (serhiy.storchaka) * (Python committer) Date: 2018-09-21 06:09
New changeset 91e6c8717b7dcbcc46b189509de5f2d335819f37 by Serhiy Storchaka (Zackery Spytz) in branch 'master':
bpo-34735: Fix a memory leak in Modules/timemodule.c (GH-9418)
https://github.com/python/cpython/commit/91e6c8717b7dcbcc46b189509de5f2d335819f37
msg325971 - (view) Author: miss-islington (miss-islington) Date: 2018-09-21 07:41
New changeset f37496e893d743dbd01c802c8e8cdc16498a1604 by Miss Islington (bot) in branch '3.6':
bpo-34735: Fix a memory leak in Modules/timemodule.c (GH-9418)
https://github.com/python/cpython/commit/f37496e893d743dbd01c802c8e8cdc16498a1604
msg325972 - (view) Author: miss-islington (miss-islington) Date: 2018-09-21 07:41
New changeset 975f3cb1f25406a9be019906227d53b23852f415 by Miss Islington (bot) in branch '3.7':
bpo-34735: Fix a memory leak in Modules/timemodule.c (GH-9418)
https://github.com/python/cpython/commit/975f3cb1f25406a9be019906227d53b23852f415
History
Date User Action Args
2022-04-11 14:59:06adminsetgithub: 78916
2018-09-21 09:15:28serhiy.storchakasetstatus: open -> closed
resolution: fixed
stage: patch review -> resolved
2018-09-21 07:41:53miss-islingtonsetmessages: + msg325972
2018-09-21 07:41:49miss-islingtonsetnosy: + miss-islington
messages: + msg325971
2018-09-21 06:10:12miss-islingtonsetpull_requests: + pull_request8883
2018-09-21 06:10:02miss-islingtonsetpull_requests: + pull_request8882
2018-09-21 06:09:52serhiy.storchakasetnosy: + serhiy.storchaka
messages: + msg325958
2018-09-19 14:06:35p-gansslesetnosy: + p-ganssle
2018-09-19 13:00:20ZackerySpytzsetkeywords: + patch
stage: patch review
pull_requests: + pull_request8838
2018-09-19 12:55:23ZackerySpytzcreate